# gameEngine2D

./: .gitattributes  .gitignore  BUILD_GUIDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/: .gitkeep
assets/shaders/: sprite.frag  sprite.vert
src/: Game.cpp  Game.h  main.cpp
src/core/: Application.cpp  Application.h  DebugUI.cpp  DebugUI.h  Input.h  Time.h  Window.cpp  Window.h
src/ecs/: ComponentPool.h  Components.h  Entity.h  Registry.h  Systems.h
src/game/: ArenaScene.cpp  ArenaScene.h  BreakoutScene.cpp  BreakoutScene.h  Scene.h
src/physics/: PhysicsSystem.cpp  PhysicsSystem.h
src/renderer/: Camera2D.cpp  Camera2D.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h
